--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-opencv-python==4.9.0.80 
-colorcet==3.0.1 
-lightning==2.1.3 
-torchmetrics==1.3.0 
-pandas==2.1.4 
-scikit-learn==1.3.2 
-seaborn==0.13.1 
-transformers==4.36.2 
-wandb==0.16.2 
-umap-learn 
-scikit-image 
-scipy 
-timm
+torch>=2.1.2
+pytorch-lightning>=2.3.4
+transformers>=4.41.0
+torchmetrics==1.3.0
+mosaicml-streaming==0.7.3
